// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GameCardPanel スナップショット/新規 1`] = `
<DocumentFragment>
  <div
    class="css-vxlbt5"
  >
    <div
      class="css-u8yv6t"
    >
      <p
        class="chakra-text css-bq8qtg"
      >
        10
      </p>
      <div
        class="css-14d7ov9"
      >
        <svg
          fill="none"
          height="40"
          viewBox="0 0 40 40"
          width="40"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.5 35.005L34.2046 20.2998C37.9318 16.5725 37.9318 10.5227 34.2046 6.79546C30.4775 3.06818 24.428 3.06818 20.7008 6.79546L19.5 7.99635L18.2992 6.79546C14.572 3.06818 8.5225 3.06818 4.79536 6.79546C1.06821 10.5227 1.06821 16.5725 4.79536 20.2998L19.5 35.005Z"
            fill="#B4171E"
          />
        </svg>
      </div>
    </div>
    <div
      class="css-87dp0f"
    >
      <div
        class="css-patx7f"
      >
        <div
          class="css-1446vam"
        >
          <p
            class="chakra-text css-1d1fz8k"
          >
            ステータス
          </p>
          <span
            class="css-y9e69r"
          >
            新規
          </span>
        </div>
        <div
          class="css-1446vam"
        >
          <p
            class="chakra-text css-1d1fz8k"
          >
            作成日時
          </p>
          <p
            class="chakra-text css-12tg5c1"
          >
            2024-04-16 03:52:10
          </p>
        </div>
        <div
          class="css-1446vam"
        >
          <p
            class="chakra-text css-1d1fz8k"
          >
            開始日時
          </p>
          <p
            class="chakra-text css-12tg5c1"
          />
        </div>
        <div
          class="css-1446vam"
        >
          <p
            class="chakra-text css-1d1fz8k"
          >
            プレイヤー
          </p>
          <div
            class="css-1yyugsn"
          >
            <p
              class="chakra-text css-npyw9q"
            >
              Player1
            </p>
            <p
              class="chakra-text css-npyw9q"
            >
              Player2
            </p>
            <p
              class="chakra-text css-npyw9q"
            >
              Player3
            </p>
            <p
              class="chakra-text css-npyw9q"
            >
              Player4
            </p>
          </div>
        </div>
        <div
          class="css-1446vam"
        >
          <p
            class="chakra-text css-1d1fz8k"
          >
            ラウンド数
          </p>
          <p
            class="chakra-text css-12tg5c1"
          >
            100round
          </p>
        </div>
      </div>
      <button
        class="chakra-button css-a29uer"
        type="button"
      >
        開始
      </button>
    </div>
    <div
      class="css-ocrfjm"
    >
      <p
        class="chakra-text css-bq8qtg"
      >
        10
      </p>
      <div
        class="css-14d7ov9"
      >
        <svg
          fill="none"
          height="40"
          viewBox="0 0 40 40"
          width="40"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.5 35.005L34.2046 20.2998C37.9318 16.5725 37.9318 10.5227 34.2046 6.79546C30.4775 3.06818 24.428 3.06818 20.7008 6.79546L19.5 7.99635L18.2992 6.79546C14.572 3.06818 8.5225 3.06818 4.79536 6.79546C1.06821 10.5227 1.06821 16.5725 4.79536 20.2998L19.5 35.005Z"
            fill="#B4171E"
          />
        </svg>
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`GameCardPanel スナップショット/終了 1`] = `
<DocumentFragment>
  <div
    class="css-vxlbt5"
  >
    <div
      class="css-u8yv6t"
    >
      <p
        class="chakra-text css-bq8qtg"
      >
        10
      </p>
      <div
        class="css-14d7ov9"
      >
        <svg
          fill="none"
          height="40"
          viewBox="0 0 40 40"
          width="40"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.5 35.005L34.2046 20.2998C37.9318 16.5725 37.9318 10.5227 34.2046 6.79546C30.4775 3.06818 24.428 3.06818 20.7008 6.79546L19.5 7.99635L18.2992 6.79546C14.572 3.06818 8.5225 3.06818 4.79536 6.79546C1.06821 10.5227 1.06821 16.5725 4.79536 20.2998L19.5 35.005Z"
            fill="#B4171E"
          />
        </svg>
      </div>
    </div>
    <div
      class="css-87dp0f"
    >
      <div
        class="css-patx7f"
      >
        <div
          class="css-1446vam"
        >
          <p
            class="chakra-text css-1d1fz8k"
          >
            ステータス
          </p>
          <span
            class="css-b5iegr"
          >
            終了
          </span>
        </div>
        <div
          class="css-1446vam"
        >
          <p
            class="chakra-text css-1d1fz8k"
          >
            作成日時
          </p>
          <p
            class="chakra-text css-12tg5c1"
          >
            2024-04-16 03:52:10
          </p>
        </div>
        <div
          class="css-1446vam"
        >
          <p
            class="chakra-text css-1d1fz8k"
          >
            開始日時
          </p>
          <p
            class="chakra-text css-12tg5c1"
          >
            2024-04-16 03:52:13
          </p>
        </div>
        <div
          class="css-1446vam"
        >
          <p
            class="chakra-text css-1d1fz8k"
          >
            プレイヤー
          </p>
          <div
            class="css-1yyugsn"
          >
            <p
              class="chakra-text css-npyw9q"
            >
              Player1
            </p>
            <p
              class="chakra-text css-npyw9q"
            >
              Player2
            </p>
            <p
              class="chakra-text css-npyw9q"
            >
              Player3
            </p>
            <p
              class="chakra-text css-npyw9q"
            >
              Player4
            </p>
          </div>
        </div>
        <div
          class="css-1446vam"
        >
          <p
            class="chakra-text css-1d1fz8k"
          >
            ラウンド数
          </p>
          <p
            class="chakra-text css-12tg5c1"
          >
            100round
          </p>
        </div>
      </div>
      <a
        class="chakra-button css-jtpj8e"
        href="/games/10"
      >
        詳細
      </a>
    </div>
    <div
      class="css-ocrfjm"
    >
      <p
        class="chakra-text css-bq8qtg"
      >
        10
      </p>
      <div
        class="css-14d7ov9"
      >
        <svg
          fill="none"
          height="40"
          viewBox="0 0 40 40"
          width="40"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.5 35.005L34.2046 20.2998C37.9318 16.5725 37.9318 10.5227 34.2046 6.79546C30.4775 3.06818 24.428 3.06818 20.7008 6.79546L19.5 7.99635L18.2992 6.79546C14.572 3.06818 8.5225 3.06818 4.79536 6.79546C1.06821 10.5227 1.06821 16.5725 4.79536 20.2998L19.5 35.005Z"
            fill="#B4171E"
          />
        </svg>
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`GameCardPanel スナップショット/進行中 1`] = `
<DocumentFragment>
  <div
    class="css-vxlbt5"
  >
    <div
      class="css-u8yv6t"
    >
      <p
        class="chakra-text css-bq8qtg"
      >
        10
      </p>
      <div
        class="css-14d7ov9"
      >
        <svg
          fill="none"
          height="40"
          viewBox="0 0 40 40"
          width="40"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.5 35.005L34.2046 20.2998C37.9318 16.5725 37.9318 10.5227 34.2046 6.79546C30.4775 3.06818 24.428 3.06818 20.7008 6.79546L19.5 7.99635L18.2992 6.79546C14.572 3.06818 8.5225 3.06818 4.79536 6.79546C1.06821 10.5227 1.06821 16.5725 4.79536 20.2998L19.5 35.005Z"
            fill="#B4171E"
          />
        </svg>
      </div>
    </div>
    <div
      class="css-87dp0f"
    >
      <div
        class="css-patx7f"
      >
        <div
          class="css-1446vam"
        >
          <p
            class="chakra-text css-1d1fz8k"
          >
            ステータス
          </p>
          <span
            class="css-1v5fpkt"
          >
            進行中
          </span>
        </div>
        <div
          class="css-1446vam"
        >
          <p
            class="chakra-text css-1d1fz8k"
          >
            作成日時
          </p>
          <p
            class="chakra-text css-12tg5c1"
          >
            2024-04-16 03:52:10
          </p>
        </div>
        <div
          class="css-1446vam"
        >
          <p
            class="chakra-text css-1d1fz8k"
          >
            開始日時
          </p>
          <p
            class="chakra-text css-12tg5c1"
          >
            2024-04-16 03:52:13
          </p>
        </div>
        <div
          class="css-1446vam"
        >
          <p
            class="chakra-text css-1d1fz8k"
          >
            プレイヤー
          </p>
          <div
            class="css-1yyugsn"
          >
            <p
              class="chakra-text css-npyw9q"
            >
              Player1
            </p>
            <p
              class="chakra-text css-npyw9q"
            >
              Player2
            </p>
            <p
              class="chakra-text css-npyw9q"
            >
              Player3
            </p>
            <p
              class="chakra-text css-npyw9q"
            >
              Player4
            </p>
          </div>
        </div>
        <div
          class="css-1446vam"
        >
          <p
            class="chakra-text css-1d1fz8k"
          >
            ラウンド数
          </p>
          <p
            class="chakra-text css-12tg5c1"
          >
            100round
          </p>
        </div>
      </div>
      <a
        class="chakra-button css-t46x3c"
        disabled=""
        href=""
      >
        進行中
      </a>
    </div>
    <div
      class="css-ocrfjm"
    >
      <p
        class="chakra-text css-bq8qtg"
      >
        10
      </p>
      <div
        class="css-14d7ov9"
      >
        <svg
          fill="none"
          height="40"
          viewBox="0 0 40 40"
          width="40"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.5 35.005L34.2046 20.2998C37.9318 16.5725 37.9318 10.5227 34.2046 6.79546C30.4775 3.06818 24.428 3.06818 20.7008 6.79546L19.5 7.99635L18.2992 6.79546C14.572 3.06818 8.5225 3.06818 4.79536 6.79546C1.06821 10.5227 1.06821 16.5725 4.79536 20.2998L19.5 35.005Z"
            fill="#B4171E"
          />
        </svg>
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;
